Initial commit - Upload restaurant website project

--- a/contact.html
+++ b/contact.html
@@ -10,13 +10,13 @@
 <body>
 
     <nav>
-        <img src="/images/logo res.webp" alt="Logo" width="50" height="50">
+        <img src="/images/RJ.jpg" alt="Logo" width="50" height="50">
         <a href="index.html">Home</a>|
         <a href="menu.html">Menu</a>|
         <a href="about.html">About Us</a>|
         <a href="reservation.html">Reservation</a>|
         <a href="contact.html">Contact Us</a>
-        <img src="/images/menuicon.jpg" alt="add to cart" width="50" height="50">
+        <img src="/images/sidebar.png" alt="add to cart" width="50" height="50">
     </nav>
 
     <h1>CONTACT US</h1>
